# ConsensusFlow

./: .env.example  .gitignore  IMPROVEMENT_PLAN.md  README.md  SYSTEM_REPORT.md  pyproject.toml
backend/: main.py
consensusflow/: __init__.py  cli.py  exceptions.py
consensusflow/core/: __init__.py  _pydantic_compat.py  cache.py  engine.py  models.py  protocol.py  scoring.py  storage.py
consensusflow/prompts/: adversarial.md  extractor.md  loader.py  synthesis.md
consensusflow/providers/: __init__.py  litellm_client.py
consensusflow/ui/: __init__.py  report.py
docs/: _config.yml  index.html
docs/assets/css/: animation.css  style.css
docs/assets/js/: demo.js  main.js
examples/: benchmark_results.json  hallucination_benchmark.py  travel_verify.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
tests/: __init__.py  test_cli.py  test_engine.py  test_engine_extended.py  test_litellm_client.py  test_loader.py  test_models.py  test_protocol.py  test_report.py  test_scoring.py
